Add new image for Mỹ Anh & Đinh Tuấn in the countdown section

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <section class="time-countdown relative" data-aos="fade-up" data-aos-duration="1000">
                 <div class="image" data-aos="zoom-in" data-aos-delay="150">
                     <fieldset>
-                        <img src="/assets/image/60x90+nhung+boc DSC_4630 1.png" alt="Mỹ Anh & Đinh Tuấn">
+                        <img src="/assets/image/DSC_46301.png" alt="Mỹ Anh & Đinh Tuấn">
                     </fieldset>
                 </div>
 
