Update invite styling and fix HTML structure for mobile intro section

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                     </fieldset>
                 </div>
 
-                <div class="mobile-intro-content absolute" data-aos="fade-down" data-aos-delay="200">
+                <div class="mobile-intro-content absolute">
                     <h1>Save The Date</h1>
                 </div>
 
-                <div class="mobie-intro-name flex absolute" data-aos="fade-up" data-aos-delay="350">
+                <div class="mobie-intro-name flex absolute">
                     <h2>Mỹ Anh</h2>
                     <span>&</span>
                     <h2>Đinh Tuấn</h2>
