Remove unused AOS attributes from multiple sections in index.html

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <main class="mobile-only-container">
 
             <!-- INTRO TOP -->
-            <section class="mobile-intro-section relative" data-aos="fade-up" data-aos-duration="1200">
+            <section class="mobile-intro-section relative">
                 <div class="image" data-aos="zoom-in" data-aos-duration="1200">
                     <fieldset>
                         <img src="/assets/image/DSC_4559 1.png" alt="Mỹ Anh & Đinh Tuấn">
@@ -92,7 +92,7 @@
             </section>
 
             <!-- CALENDAR -->
-            <section class="mobie-intro-calendar" data-aos="fade-up" data-aos-duration="1000">
+            <section class="mobie-intro-calendar">
                 <div class="wedding-calendar">
                     <div class="calendar-header">
                         <h2 class="title-script" data-aos="fade-right" data-aos-delay="150">
@@ -165,7 +165,7 @@
             </section>
 
             <!-- HAI ẢNH CÔ DÂU / CHÚ RỂ -->
-            <section class="mobie-image-decor" data-aos="fade-up" data-aos-duration="1000">
+            <section class="mobie-image-decor">
                 <div class="flex image-decor-container">
                     <div class="image-decor-top relative" data-aos="fade-right" data-aos-delay="150">
                         <div class="image">
@@ -194,7 +194,7 @@
             </section>
 
             <!-- THIỆP MỜI - THÔNG TIN -->
-            <section class="mobie-information" data-aos="fade-up" data-aos-duration="1000">
+            <section class="mobie-information">
                 <div class="invite-inner flex flex-col items-center">
                     <div class="invite-address" data-aos="fade-up" data-aos-delay="100">
                         <p class="invite-line invite-line--small invite-line--upper title-1">
@@ -249,7 +249,7 @@
             </section>
 
             <!-- ẢNH TO -->
-            <section class="mobie-image" data-aos="fade-up" data-aos-duration="1000">
+            <section class="mobie-image" >
                 <div class="image" data-aos="zoom-in" data-aos-delay="150">
                     <fieldset>
                         <img src="/assets/image/DSC_4633 1.png" alt="Mỹ Anh & Đinh Tuấn">
@@ -258,7 +258,7 @@
             </section>
 
             <!-- TRANG THIỆP 2 -->
-            <section class="invite-page-2" data-aos="fade-up" data-aos-duration="1000">
+            <section class="invite-page-2" >
                 <div class="invite-inner">
 
                     <div class="invite-top-row relative" data-aos="fade-up" data-aos-delay="100">
@@ -316,7 +316,7 @@
             </section>
 
             <!-- ĐẾM NGƯỢC -->
-            <section class="time-countdown relative" data-aos="fade-up" data-aos-duration="1000">
+            <section class="time-countdown relative" >
                 <div class="image" data-aos="zoom-in" data-aos-delay="150">
                     <fieldset>
                         <img src="/assets/image/DSC_46301.png" alt="Mỹ Anh & Đinh Tuấn">
@@ -359,7 +359,7 @@
             </section>
 
             <!-- MAP -->
-            <section class="map-wending" data-aos="fade-up" data-aos-duration="1000">
+            <section class="map-wending" >
                 <div class="content">
                     <div class="address" data-aos="fade-up" data-aos-delay="150">
                         <h2 class="text-center">Địa chỉ</h2>
