--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
                 <!-- ĐẾM NGƯỢC -->
                 <section class="time-countdown relative">
-                    <div class="image" data-aos="zoom-in" data-aos-delay="150">
+                    <div class="image">
                         <fieldset>
                             <img src="/assets/image/DSC_46301.png" alt="Mỹ Anh & Đinh Tuấn">
                         </fieldset>
