Refactor AOS animations in index.html for consistency and improved visual effects; remove unnecessary margin in custom.scss and custom.css

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <!-- HAI ẢNH CÔ DÂU / CHÚ RỂ -->
                 <section class="mobie-image-decor">
                     <div class="flex image-decor-container">
-                        <div class="image-decor-top relative" data-aos="fade-right" data-aos-delay="150">
+                        <div class="image-decor-top relative" data-aos="fade-up" data-aos-delay="150">
                             <div class="image">
                                 <fieldset>
                                     <img src="/assets/image/DSC_4659 1.png" alt="Mỹ Anh & Đinh Tuấn">
@@ -178,7 +178,7 @@
                             </div>
                         </div>
 
-                        <div class="image-decor-bottom relative" data-aos="fade-left" data-aos-delay="150">
+                        <div class="image-decor-bottom relative" data-aos="fade-up" data-aos-delay="150">
                             <div class="image">
                                 <fieldset>
                                     <img src="/assets/image/DSC_4659 1 (1).png" alt="Mỹ Anh & Đinh Tuấn">
@@ -225,7 +225,7 @@
                             </p>
 
                             <div class="invite-date-row w-full">
-                                <div class="invite-date-side" data-aos="fade-right" data-aos-delay="500">
+                                <div class="invite-date-side" data-aos="fade-up" data-aos-delay="500">
                                     <span class="invite-date-text title-4">Tháng 12</span>
                                     <span class="invite-date-line"></span>
                                 </div>
@@ -234,7 +234,7 @@
                                     <span class="invite-date-number title-5">13</span>
                                 </div>
 
-                                <div class="invite-date-side" data-aos="fade-left" data-aos-delay="500">
+                                <div class="invite-date-side" data-aos="fade-up" data-aos-delay="500">
                                     <span class="invite-date-text title-4">Năm 2025</span>
                                     <span class="invite-date-line"></span>
                                 </div>
@@ -260,12 +260,11 @@
                 <section class="invite-page-2">
                     <div class="invite-inner">
 
-                        <div class="invite-top-row relative" data-aos="fade-up" data-aos-delay="100">
-                            <p class="invite-top-text">
+                        <div class="invite-top-row relative" >
+                            <p class="invite-top-text" data-aos="fade-up" data-aos-delay="150">
                                 WE’RE GETTING MARRIED
                             </p>
-                            <span class="invite-letter-big invite-letter-big--top" data-aos="fade-left"
-                                data-aos-delay="250">T</span>
+                            <span class="invite-letter-big invite-letter-big--top">T</span>
                         </div>
 
                         <div class="invite-families" data-aos="fade-up" data-aos-delay="300">
@@ -275,7 +274,7 @@
                                 <p>BÀ: Nguyễn Thị Oanh</p>
                             </div>
 
-                            <div class="invite-family invite-family--groom" data-aos="fade-left" data-aos-delay="350">
+                            <div class="invite-family invite-family--groom" data-aos="fade-up" data-aos-delay="350">
                                 <p class="family-title">NHÀ TRAI</p>
                                 <p>ÔNG: Đinh Văn Tính</p>
                                 <p>BÀ: Nguyễn Thị Tính</p>
@@ -295,8 +294,7 @@
                         </div>
 
                         <div class="invite-bottom-row">
-                            <span class="invite-letter-big invite-letter-big--bottom" data-aos="fade-right"
-                                data-aos-delay="500">A</span>
+                            <span class="invite-letter-big invite-letter-big--bottom">A</span>
 
                             <div class="invite-ceremony" data-aos="fade-up" data-aos-delay="600">
                                 <p class="title-1">HÔN LỄ ĐƯỢC CỬ HÀNH TẠI TƯ GIA</p>
@@ -405,6 +403,7 @@
             });
 
         </script>
+
 </body>
 
 </html>
