--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             <p>
                                 Cảm ơn bạn đã dành tình cảm cho chúng mình! </br>
                                 Sự hiện diện của bạn chính là món quà ý nghĩa nhất,
-                                và chúng mình vô</br> cùng trân quý khi được
+                                và chúng mình vô cùng trân quý khi được
                                 cùng bạn chia sẻ niềm hạnh phúc trong ngày trọng đại này.
                             </p>
                         </div>
@@ -367,11 +367,11 @@
                                     fill="none">
                                     <path
                                         d="M12 13C13.6569 13 15 11.6569 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 11.6569 10.3431 13 12 13Z"
-                                        stroke="#333333" stroke-width="1.6" stroke-linecap="round"
+                                        stroke="#432215" stroke-width="1.6" stroke-linecap="round"
                                         stroke-linejoin="round" />
                                     <path
                                         d="M12 22C16 18 20 14.4183 20 10C20 5.58172 16.4183 2 12 2C7.58172 2 4 5.58172 4 10C4 14.4183 8 18 12 22Z"
-                                        stroke="#333333" stroke-width="1.6" stroke-linecap="round"
+                                        stroke="#432215" stroke-width="1.6" stroke-linecap="round"
                                         stroke-linejoin="round" />
                                 </svg>
                                 Thôn Phúc Trại, Xã Thượng Phúc, TP. Hà Nội
