--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                             <span class="invite-letter-big invite-letter-big--bottom">A</span>
 
                             <div class="invite-ceremony" data-aos="fade-up" data-aos-delay="600">
-                                <p class="title-1">HÔN LỄ ĐƯỢC CỬ HÀNH TẠI TƯ GIA</p>
+                                <p class="title-1 mb-2">HÔN LỄ ĐƯỢC CỬ HÀNH TẠI TƯ GIA</p>
                                 <p class="title-1">VÀO LÚC 10:00, CHỦ NHẬT</p>
 
                                 <p class="invite-date-main" data-aos="zoom-in" data-aos-delay="700">
