--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Tên website của bạn" />
-    <meta property="og:description" content="Mô tả ngắn gọn về website." />
-    <meta property="og:image" content="https://wedding-myanh-dinhtuan.vercel.app/assets/image/og-image.jpg" />
+    <meta property="og:title" content="MỸ ANH & ĐINH TUẤN" />
+    <meta property="og:description" content="WE’RE GETTING MARRIED" />
+    <meta property="og:image" content="https://wedding-myanh-dinhtuan.vercel.app/assets/image/og-image.JPG" />
     <meta property="og:url" content="https://wedding-myanh-dinhtuan.vercel.app" />
     <meta property="og:type" content="website" />
 
     <!-- Thumbnail khi share trên Twitter và một số nền tảng khác -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://wedding-myanh-dinhtuan.vercel.app/assets/image/og-image.jpg">
+    <meta name="twitter:image" content="https://wedding-myanh-dinhtuan.vercel.app/assets/image/og-image.JPG">
 
     <title>Mỹ Anh & Đinh Tuấn</title>
     <!-- <link rel="icon" type="image/png" href="/assets/images/favicon.png"
