Enhance calendar animations by removing redundant AOS attributes for improved performance

--- a/index.html
+++ b/index.html
@@ -112,63 +112,63 @@
                         </h2>
                     </div>
 
-                    <div class="calendar-grid">
+                    <div class="calendar-grid" data-aos="fade-up" data-aos-duration="500">
                         <!-- header day -->
-                        <div data-aos="fade-up" data-aos-duration="500" class="date">Sun</div>
-                        <div data-aos="fade-up" data-aos-duration="550" class="date">Mon</div>
-                        <div data-aos="fade-up" data-aos-duration="600" class="date">Tue</div>
-                        <div data-aos="fade-up" data-aos-duration="650" class="date">Wed</div>
-                        <div data-aos="fade-up" data-aos-duration="700" class="date">Thu</div>
-                        <div data-aos="fade-up" data-aos-duration="750" class="date">Fri</div>
-                        <div data-aos="fade-up" data-aos-duration="800" class="date">Sat</div>
+                        <div class="date">Sun</div>
+                        <div class="date">Mon</div>
+                        <div class="date">Tue</div>
+                        <div class="date">Wed</div>
+                        <div class="date">Thu</div>
+                        <div class="date">Fri</div>
+                        <div class="date">Sat</div>
 
                         <!-- ngày -->
-                        <div data-aos="fade-up" data-aos-duration="850" class="disabled date">30</div>
-                        <div data-aos="fade-up" data-aos-duration="900" class="date">1</div>
-                        <div data-aos="fade-up" data-aos-duration="950" class="date">2</div>
-                        <div data-aos="fade-up" data-aos-duration="1000" class="date">3</div>
-                        <div data-aos="fade-up" data-aos-duration="1050" class="date">4</div>
-                        <div data-aos="fade-up" data-aos-duration="1100" class="date">5</div>
+                        <div class="disabled date">30</div>
+                        <div class="date">1</div>
+                        <div class="date">2</div>
+                        <div class="date">3</div>
+                        <div class="date">4</div>
+                        <div class="date">5</div>
                         <div data-aos="fade-up" data-aos-duration="1150" class="date">6</div>
 
-                        <div data-aos="fade-up" data-aos-duration="1200" class="date">7</div>
-                        <div data-aos="fade-up" data-aos-duration="1250" class="date">8</div>
-                        <div data-aos="fade-up" data-aos-duration="1300" class="date">9</div>
-                        <div data-aos="fade-up" data-aos-duration="1350" class="date">10</div>
-                        <div data-aos="fade-up" data-aos-duration="1400" class="date">11</div>
-                        <div data-aos="fade-up" data-aos-duration="1450" class="date">12</div>
-                        <div data-aos="fade-up" data-aos-duration="1500" class="date">13</div>
+                        <div class="date">7</div>
+                        <div class="date">8</div>
+                        <div class="date">9</div>
+                        <div class="date">10</div>
+                        <div class="date">11</div>
+                        <div class="date">12</div>
+                        <div class="date">13</div>
 
                         <!-- ngày trái tim -->
-                        <div class="heart-day" data-aos="zoom-in" data-aos-duration="1550">
-                            <div class="img" data-aos="zoom-in" data-aos-duration="1600">
+                        <div class="heart-day" data-aos="zoom-in" data-aos-duration="550">
+                            <div class="img" data-aos="zoom-in" data-aos-duration="600">
                                 <img src="/assets/image/heart.png" alt="heart">
                             </div>
-                            <span data-aos="fade-up" data-aos-duration="1650">14</span>
+                            <span >14</span>
                         </div>
 
-                        <div data-aos="fade-up" data-aos-duration="1700" class="date">15</div>
-                        <div data-aos="fade-up" data-aos-duration="1750" class="date">16</div>
-                        <div data-aos="fade-up" data-aos-duration="1800" class="date">17</div>
-                        <div data-aos="fade-up" data-aos-duration="1850" class="date">18</div>
-                        <div data-aos="fade-up" data-aos-duration="1900" class="date">19</div>
-                        <div data-aos="fade-up" data-aos-duration="1950" class="date">20</div>
+                        <div class="date">15</div>
+                        <div class="date">16</div>
+                        <div class="date">17</div>
+                        <div class="date">18</div>
+                        <div class="date">19</div>
+                        <div class="date">20</div>
 
-                        <div data-aos="fade-up" data-aos-duration="2000" class="date">21</div>
-                        <div data-aos="fade-up" data-aos-duration="2050" class="date">22</div>
-                        <div data-aos="fade-up" data-aos-duration="2100" class="date">23</div>
-                        <div data-aos="fade-up" data-aos-duration="2150" class="date">24</div>
-                        <div data-aos="fade-up" data-aos-duration="2200" class="date">25</div>
-                        <div data-aos="fade-up" data-aos-duration="2250" class="date">26</div>
-                        <div data-aos="fade-up" data-aos-duration="2300" class="date">27</div>
+                        <div class="date">21</div>
+                        <div class="date">22</div>
+                        <div class="date">23</div>
+                        <div class="date">24</div>
+                        <div class="date">25</div>
+                        <div class="date">26</div>
+                        <div class="date">27</div>
 
-                        <div data-aos="fade-up" data-aos-duration="2350" class="date">28</div>
-                        <div data-aos="fade-up" data-aos-duration="2400" class="date">29</div>
-                        <div data-aos="fade-up" data-aos-duration="2450" class="date">30</div>
-                        <div data-aos="fade-up" data-aos-duration="2500" class="date">31</div>
-                        <div data-aos="fade-up" data-aos-duration="2550" class="disabled date">1</div>
-                        <div data-aos="fade-up" data-aos-duration="2600" class="disabled date">2</div>
-                        <div data-aos="fade-up" data-aos-duration="2650" class="disabled date">3</div>
+                        <div class="date">28</div>
+                        <div class="date">29</div>
+                        <div class="date">30</div>
+                        <div class="date">31</div>
+                        <div class="disabled date">1</div>
+                        <div class="disabled date">2</div>
+                        <div class="disabled date">3</div>
                     </div>
                 </div>
             </section>
