Remove AOS attributes from heart-day elements for cleaner markup

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                         <div class="date">13</div>
 
                         <!-- ngày trái tim -->
-                        <div class="heart-day" data-aos="zoom-in" data-aos-duration="550">
-                            <div class="img" data-aos="zoom-in" data-aos-duration="600">
+                        <div class="heart-day">
+                            <div class="img">
                                 <img src="/assets/image/heart.png" alt="heart">
                             </div>
                             <span >14</span>
