Comment out AOS initialization script for potential performance improvement

--- a/index.html
+++ b/index.html
@@ -405,12 +405,12 @@
     <script src="/assets/js/coundonw.js"></script>
     <script src="/assets/js/oke.js"></script>
     <script>
-        AOS.init({
-            duration: 1200,          // lâu hơn 1 chút cho mượt
-            easing: 'ease-out-cubic',// chuyển động êm hơn
-            offset: 80,              // bắt đầu animate sớm hơn 1 chút
-            once: true               // chỉ animate 1 lần, đỡ nhấp nháy
-        });
+        // AOS.init({
+        //     duration: 1200,          // lâu hơn 1 chút cho mượt
+        //     easing: 'ease-out-cubic',// chuyển động êm hơn
+        //     offset: 80,              // bắt đầu animate sớm hơn 1 chút
+        //     once: true               // chỉ animate 1 lần, đỡ nhấp nháy
+        // });
 
     </script>
 
