--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <!-- HAI ẢNH CÔ DÂU / CHÚ RỂ -->
             <section class="mobie-image-decor">
                 <div class="flex image-decor-container">
-                    <div class="image-decor-top relative" data-aos="fade-up" data-aos-delay="150">
+                    <div class="image-decor-top relative" >
                         <div class="image">
                             <fieldset>
                                 <img src="/assets/image/DSC_4659 1.png" alt="Mỹ Anh & Đinh Tuấn">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
 
-                    <div class="image-decor-bottom relative" data-aos="fade-up" data-aos-delay="150">
+                    <div class="image-decor-bottom relative" >
                         <div class="image">
                             <fieldset>
                                 <img src="/assets/image/DSC_4659 1 (1).png" alt="Mỹ Anh & Đinh Tuấn">
