Refactor AOS usage by removing lightweight CSS animations and optimizing data-aos attributes for improved performance

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <section class="mobie-image-decor">
                 <div class="flex image-decor-container">
                     <div class="image-decor-top relative" >
-                        <div class="image">
+                        <div class="image" data-aos="zoom-in" data-aos-duration="1200">
                             <fieldset>
                                 <img src="/assets/image/DSC_4659 1.png" alt="Mỹ Anh & Đinh Tuấn">
                             </fieldset>
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="image-decor-bottom relative" >
-                        <div class="image">
+                        <div class="image" data-aos="zoom-in" data-aos-duration="1200">
                             <fieldset>
                                 <img src="/assets/image/DSC_4659 1 (1).png" alt="Mỹ Anh & Đinh Tuấn">
                             </fieldset>
@@ -201,7 +201,7 @@
             <!-- THIỆP MỜI - THÔNG TIN -->
             <section class="mobie-information">
                 <div class="invite-inner flex flex-col items-center">
-                    <div class="invite-address" data-aos="fade-up" data-aos-delay="100">
+                    <div class="invite-address">
                         <p class="invite-line invite-line--small invite-line--upper title-1">
                             TRÂN TRỌNG KÍNH MỜI
                         </p>
@@ -223,28 +223,28 @@
                         </p>
                     </div>
 
-                    <div class="invite-your-time" data-aos="fade-up" data-aos-delay="450">
+                    <div class="invite-your-time">
                         <p class="invite-time title-2">
                             Vào lúc 17:00, Thứ 7
                         </p>
 
                         <div class="invite-date-row w-full">
-                            <div class="invite-date-side" data-aos="fade-up" data-aos-delay="500">
+                            <div class="invite-date-side">
                                 <span class="invite-date-text title-4">Tháng 12</span>
                                 <span class="invite-date-line"></span>
                             </div>
 
-                            <div class="invite-date-center" data-aos="zoom-in" data-aos-delay="550">
+                            <div class="invite-date-center">
                                 <span class="invite-date-number title-5">13</span>
                             </div>
 
-                            <div class="invite-date-side" data-aos="fade-up" data-aos-delay="500">
+                            <div class="invite-date-side">
                                 <span class="invite-date-text title-4">Năm 2025</span>
                                 <span class="invite-date-line"></span>
                             </div>
                         </div>
 
-                        <p class="invite-note title-1" data-aos="fade-up" data-aos-delay="600">
+                        <p class="invite-note title-1">
                             (Tức ngày 24 tháng 10 năm Ất Tỵ)
                         </p>
                     </div>
@@ -265,32 +265,32 @@
                 <div class="invite-inner">
 
                     <div class="invite-top-row relative">
-                        <p class="invite-top-text" data-aos="fade-up" data-aos-delay="150">
+                        <p class="invite-top-text">
                             WE’RE GETTING MARRIED
                         </p>
-                        <span class="invite-letter-big invite-letter-big--top">T</span>
+                        <span class="invite-letter-big invite-letter-big--top" data-aos="zoom-in" data-aos-duration="1200">T</span>
                     </div>
 
-                    <div class="invite-families" data-aos="fade-up" data-aos-delay="300">
-                        <div class="invite-family invite-family--bride" data-aos="fade-right" data-aos-delay="350">
+                    <div class="invite-families">
+                        <div class="invite-family invite-family--bride">
                             <p class="family-title">NHÀ GÁI</p>
                             <p>ÔNG: Nguyễn Văn Khiến</p>
                             <p>BÀ: Nguyễn Thị Oanh</p>
                         </div>
 
-                        <div class="invite-family invite-family--groom" data-aos="fade-up" data-aos-delay="350">
+                        <div class="invite-family invite-family--groom">
                             <p class="family-title">NHÀ TRAI</p>
                             <p>ÔNG: Đinh Văn Tính</p>
                             <p>BÀ: Nguyễn Thị Tính</p>
                         </div>
                     </div>
 
-                    <div class="announce" data-aos="fade-up" data-aos-delay="450">
+                    <div class="announce">
                         <p class="invite-announce text-center">
                             TRÂN TRỌNG BÁO TIN LỄ VU QUY CỦA
                         </p>
 
-                        <div class="invite-couple" data-aos="zoom-in" data-aos-delay="550">
+                        <div class="invite-couple">
                             <p class="invite-name text-start">MỸ ANH</p>
                             <p class="invite-amp">&</p>
                             <p class="invite-name text-end">ĐINH TUẤN</p>
@@ -298,17 +298,17 @@
                     </div>
 
                     <div class="invite-bottom-row">
-                        <span class="invite-letter-big invite-letter-big--bottom">A</span>
+                        <span class="invite-letter-big invite-letter-big--bottom" data-aos="zoom-in" data-aos-duration="1200">A</span>
 
-                        <div class="invite-ceremony" data-aos="fade-up" data-aos-delay="600">
+                        <div class="invite-ceremony">
                             <p class="title-1 mb-2">HÔN LỄ ĐƯỢC CỬ HÀNH TẠI TƯ GIA</p>
                             <p class="title-1">VÀO LÚC 10:00, CHỦ NHẬT</p>
 
-                            <p class="invite-date-main" data-aos="zoom-in" data-aos-delay="700">
+                            <p class="invite-date-main">
                                 14 | 12 | 2025
                             </p>
 
-                            <p class="invite-date-sub" data-aos="fade-up" data-aos-delay="750">
+                            <p class="invite-date-sub">
                                 (TỨC NGÀY 25 THÁNG 10 NĂM ẤT TỴ)
                             </p>
                         </div>
@@ -324,11 +324,11 @@
                     </fieldset>
                 </div>
 
-                <div class="content" data-aos="fade-up" data-aos-delay="300">
+                <div class="content">
                     <div class="time">
-                        <h1 data-aos="fade-up" data-aos-delay="350">Đếm ngược</h1>
+                        <h1>Đếm ngược</h1>
 
-                        <div class="countdown-timer flex" data-aos="zoom-in" data-aos-delay="450">
+                        <div class="countdown-timer flex">
                             <div class="time-item flex flex-col items-center">
                                 <span id="days" class="time-number">00</span>
                                 <span class="time-label">ngày</span>
@@ -348,7 +348,7 @@
                         </div>
                     </div>
 
-                    <div class="desc" data-aos="fade-up" data-aos-delay="550">
+                    <div class="desc">
                         <p>
                             Cảm ơn bạn đã dành tình cảm cho chúng mình! </br>
                             Sự hiện diện của bạn chính là món quà ý nghĩa nhất,
@@ -362,11 +362,10 @@
             <!-- MAP -->
             <section class="map-wending">
                 <div class="content">
-                    <div class="address" data-aos="fade-up" data-aos-delay="150">
+                    <div class="address">
                         <h2 class="text-center">Địa chỉ</h2>
                         <a href="https://maps.app.goo.gl/KTuLYLWetvwpMK3ZA"
-                            class="text-center flex items-center justify-center gap-2" data-aos="fade-up"
-                            data-aos-delay="250">
+                            class="text-center flex items-center justify-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <path
@@ -382,7 +381,7 @@
                         </a>
                     </div>
 
-                    <div data-aos="fade-up" data-aos-delay="350">
+                    <div>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1864.274021047673!2d105.84161998882814!3d20.849949401756984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135b3bcede5d2ff%3A0xdf541f2b67463671!2zUGjDumMgVHLhuqFpLCBUw6JuIE1pbmgsIFRoxrDhu51uZyBUw61uLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1765023240915!5m2!1svi!2s"
                             width="440" height="248" style="border:0;" allowfullscreen="" loading="lazy"
@@ -400,38 +399,12 @@
     <script src="/assets/js/oke.js"></script>
     <script>
         (function(){
-            // Disable or reduce AOS on small/low-power devices and strip heavy usages
-            function isSmallScreen(){
-                return window.innerWidth <= 440 || /Mobi|Android/i.test(navigator.userAgent);
-            }
-
-            // Remove data-aos from selectors that tend to be repetitive/heavy
-            function stripHeavyAos(){
-                const heavySelectors = [
-                    '.calendar-grid [data-aos]',
-                    '.countdown-timer [data-aos]',
-                    '.date[data-aos]',
-                    '.invite-family [data-aos]'
-                ];
-                heavySelectors.forEach(sel => {
-                    document.querySelectorAll(sel).forEach(el => el.removeAttribute('data-aos'));
-                });
-            }
-
-            if (isSmallScreen()){
-                // On small screens, remove all AOS attributes to keep scrolling smooth
-                document.querySelectorAll('[data-aos]').forEach(el => el.removeAttribute('data-aos'));
-            } else {
-                // On desktop, just strip heavy repetitive elements
-                stripHeavyAos();
-            }
-
+            // Simple AOS init: enable animations (we keep AOS attributes only on top images)
             AOS.init({
-                duration: 700,
+                duration: 1200,
                 easing: 'ease-out-cubic',
-                offset: 40,
-                once: true,
-                disable: function(){ return isSmallScreen(); }
+                offset: 80,
+                once: true
             });
         })();
     </script>
