--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- CALENDAR -->
             <section class="mobie-intro-calendar">
                 <div class="wedding-calendar">
-                    <div class="calendar-header">
+                    <div class="calendar-header" data-aos="fade-up" data-aos-delay="100">
                         <h2 class="title-script">
                             Our wedding day
                         </h2>
@@ -108,7 +108,7 @@
                         </h2>
                     </div>
 
-                    <div class="calendar-grid" >
+                    <div class="calendar-grid" data-aos="fade-up" data-aos-delay="200">
                         <!-- header day -->
                         <div class="date">Sun</div>
                         <div class="date">Mon</div>
